--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 language: python
 
 install:
-  - pip install vim-vint
+  - pip install vim-vint==v0.3.18
 
 script:
   - vint --verbose --stat $(find . -type f -name '*.vim')
