--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-# vim-srcery .travis.yml
+# srcery-colors/srcery-vim/.travis.yml
 
 language: python
 
 install:
-  - pip install vim-vint==v0.3.18
+  - pip install vim-vint
 
 script:
   - vint --verbose --stat $(find . -type f -name '*.vim')
