ci: run lint job on pull requests

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,7 +1,10 @@
 ---
 name: Check Them Vim Files
-# This workflow is triggered on pushes to the repository.
-on: [push]
+
+on:
+  push:
+  pull_request:
+    branches: [$default-branch]
 
 jobs:
   lint:
@@ -12,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-      - name: Install vint
+      - name: Install Vint
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install --upgrade vim-vint
